messages stored in db; links from angel, event & team views to create messages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -224,12 +224,6 @@ caption {
   width: 300px;
 }
 
-.messages {
-  .header, .footer {
-      background-color: #FFD;
-      border: 1px solid #E4E4E4;
-      padding-left: 10px;
-      padding-right: 10px;
-      margin-bottom: 5px;
-  }
+form {
+  margin-bottom: 20px;
 }
