display a little more information about team members; make it easier to copy/paste the name list

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -163,11 +163,9 @@ body {
   .role {
     font-weight: bold;
   }
-  .notes {
+  .summary {
     font-style: italic;
-  }
-  .status {
-    color: #0f8a26;
+    font-size: smaller;
   }
   .highest-level {
     color: red;
