--- a/app/views/office/members/_member.html.haml
+++ b/app/views/office/members/_member.html.haml
@@ -2,6 +2,6 @@
 = link_to([:edit, :office, member.team, member], class: 'list-group-item') do
   %span.name= member.full_name
   %span.highest-level= "[Highest Level: #{member.highest_level}]" if @team.event.level && member.highest_level < @team.event.level
-  %span.role= "[#{member.role}]" if member.role.present?
-  %span.status= member.status
-  %span.notes= member.notes
+  %span.role= "[Assigned #{member.role}]" if member.role.present?
+  %br
+  %span.summary= member.summary
