--- a/app/views/office/members/_member.html.haml
+++ b/app/views/office/members/_member.html.haml
@@ -1,7 +1,13 @@
 - member = member.decorate
-= link_to([:edit, :office, member.team, member], class: 'list-group-item') do
-  %span.name= member.full_name
-  %span.highest-level= "[Highest Level: #{member.highest_level}]" if @team.event.level && member.highest_level < @team.event.level
-  %span.role= "[Assigned #{member.role}]" if member.role.present?
-  %br
-  %span.summary= member.summary
+%tr.team-member
+  %td.created-at= member.created_at
+  %td.name
+    = link_to(member.full_name, [:edit, :office, member.team, member])
+    - if member.notes.present?
+      %br
+      %span.notes= member.notes
+  %td= member.gender
+  %td= member.last_team_date
+  %td= member.total_on_team
+  %td= member.role
+  %td.highest-level= member.highest_level
