--- a/app/views/office/memberships/_membership.html.haml
+++ b/app/views/office/memberships/_membership.html.haml
@@ -4,6 +4,9 @@
       %th Name
       %td= link_to_angel(membership.angel)
     %tr
+      %th Default Role
+      %td= membership.default_role
+    %tr
       %th Status
       %td= membership.status
     %tr
