display status and notes if present

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -163,7 +163,7 @@ body {
   .created-at {
     white-space: nowrap;
   }
-  .notes {
+  .summary {
     font-style: italic;
     font-size: smaller;
   }
