--- a/app/views/office/teams/_counts.html.haml
+++ b/app/views/office/teams/_counts.html.haml
@@ -1,5 +1,4 @@
-- stats = team.stats
 .row
   .col-xs-12
     = render 'gender_statistic', label: 'Participants', scope: team.event.participants
-    = render 'gender_statistic', label: 'Team', scope: team.members
+    = render 'gender_statistic', label: 'Team', scope: team.members.excluding_facilitators
