--- a/app/views/office/memberships/_form.html.haml
+++ b/app/views/office/memberships/_form.html.haml
@@ -1,10 +1,23 @@
-= vertical_form([:office, @membership]) do |f|
-  = f.association :angel, options_for_angel_select(f)
-  = f.input :status, options_for_membership_status(f)
-  = f.input :default_role, options_for_membership_default_role(f)
-  = f.input :active_on, :as => :string, input_html: {class: 'date-pick'}, :format => '%d.%m.%Y'
-  = f.input :retired_on, :as => :string, input_html: {class: 'date-pick'}, :format => '%d.%m.%Y' if @membership.persisted?
-  = f.input :participant_cost
-  = f.input :team_cost
-  = f.input :notes, :input_html => {:cols => 25, :rows => 3}
+= horizontal_form([:office, @membership]) do |f|
+  .row
+    .col-sm-6
+      = f.association :angel, options_for_angel_select(f)
+    .col-sm-6
+      = f.input :default_role, options_for_membership_default_role(f)
+  .row
+    .col-sm-6
+      = f.input :status, options_for_membership_status(f)
+  .row
+    .col-sm-6
+      = f.input :active_on, :as => :string, input_html: {class: 'date-pick'}, :format => '%d.%m.%Y'
+    .col-sm-6
+      = f.input :retired_on, :as => :string, input_html: {class: 'date-pick'}, :format => '%d.%m.%Y' if @membership.persisted?
+  .row
+    .col-sm-6
+      = f.input :participant_cost
+    .col-sm-6
+      = f.input :team_cost
+  .row
+    .col-sm-6
+      = f.input :notes, :input_html => {:cols => 25, :rows => 3}
   = f.button :submit
