--- a/app/views/office/registrations/_request.html.haml
+++ b/app/views/office/registrations/_request.html.haml
@@ -2,40 +2,17 @@
   .panel-heading
     %h4 Registration Information
 
-  %table.table.table-key-values
+  %table.detail
     %tbody
-      %tr
-        %th Role
-        %td= registration.role
-      %tr
-        %th Gender
-        %td= registration.gender
-      %tr
-        %th Special Requests
-        %td= registration_requests(registration)
-      %tr
-        %th Notes
-        %td= registration.notes
+    = tr_fields(registration, :role, :gender)
+    = tr_field('Special Requests', registration_requests(registration))
+    = tr_field('Notes', registration.notes)
 
 - if [:how_hear, :previous_event, :highest_level, :highest_location, :highest_date].map {|field| registration.send(field).present? }.any?
   .panel.panel-default
     .panel-heading
       %h4 Research
 
-    %table.table.table-key-values
+    %table.detail
       %tbody
-        %tr
-          %th How Hear
-          %td= registration.how_hear
-        %tr
-          %th Previous Event
-          %td= registration.previous_event
-        %tr
-          %th Highest Level
-          %td= registration.highest_level
-        %tr
-          %th Where
-          %td= registration.highest_location
-        %tr
-          %th When
-          %td= registration.highest_date
+        = tr_fields(registration, :how_hear, :previous_event, :highest_level, :highest_location, :highest_date)
