refactor name of registration methods to be more clear

--- a/app/views/office/members/_member.html.haml
+++ b/app/views/office/members/_member.html.haml
@@ -7,7 +7,7 @@
       %br
       %span.summary= member.summary
   %td= member.gender
-  %td= member.last_team_date
-  %td= member.total_on_team
+  %td= member.most_recent_on_team_date
+  %td= member.hai_workshops_on_team_count
   %td= member.role
   %td.highest-level= member.highest_level
